# persistent_file_queue

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
benchmark/: CMakeLists.txt
benchmark/src/: benchmark_persistent_queue.cpp
cmake/: tools.cmake
include/persistent_file_queue/: hello.h  persistent_queue.h
scripts/: build_release.sh
src/: hello.cpp  persistent_queue.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/: CMakeLists.txt
tests/src/: main.cc  test_persistent_queue.cpp
